opam-version: "1.2"
synopsis: "Converts OCaml floats into strings, using the efficient Grisu3 algorithm."
maintainer: "Marshall Roch <mroch@fb.com>"
authors: ["Marshall Roch <mroch@fb.com>"]
homepage: "https://github.com/flowtype/ocaml-dtoa"
doc: "https://github.com/flowtype/ocaml-dtoa"
license: "MIT"
dev-repo: "https://github.com/flowtype/ocaml-dtoa.git"
bug-reports: "https://github.com/flowtype/ocaml-dtoa/issues"
tags: []
available: [ ocaml-version >= "4.01.0"]
depends:
[
  "dune" {build & >= "1.0"}
  "ounit" {with-test & >= "2.0.0"}
]
depopts: []
build: [["dune" "build" "-p" name "-j" jobs]]
run-test: [["dune" "runtest" "-p" name "-j" jobs]]
