opam-version: "2.0"
synopsis: "Converts OCaml floats into strings, using the efficient Grisu3 algorithm"
maintainer: "Marshall Roch <mroch@fb.com>"
authors: "Marshall Roch <mroch@fb.com>"
license: "MIT"
homepage: "https://github.com/flowtype/ocaml-dtoa"
doc: "https://github.com/flowtype/ocaml-dtoa"
bug-reports: "https://github.com/flowtype/ocaml-dtoa/issues"
depends: [
  "ocaml" {>= "4.01.0"}
  "dune" {>= "1.0"}
  "ounit2" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/flowtype/ocaml-dtoa.git"
description: """
This is a (partial) port of Google's double-conversion library from C++ to C.
"""
